docs: :memo: doc
documentação e ajustes
