# src/swagger.json
@@ -130,6 +130,428 @@
           }
         }
       }
+    },
+    "/games": {
+      "post": {
+        "tags": [
+          "Game - Developer Route"
+        ],
+        "summary": "Create a new game",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Game"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Game - Public Route"
+        ],
+        "summary": "Get all games by filters",
+        "parameters": [
+          {
+            "name": "title",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "genres",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "range_days",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "price_min",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "price_max",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "is_free",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "take",
+            "in": "query",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/games/{id}": {
+      "put": {
+        "tags": [
+          "Game - Developer Route"
+        ],
+        "summary": "Update a game",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Game"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Game"
+        ],
+        "summary": "Get a game",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Game - Developer Route"
+        ],
+        "summary": "Delete a game",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/games/my-games": {
+      "get": {
+        "tags": [
+          "Game - Developer Route"
+        ],
+        "summary": "Get all the games I added",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/games/upload/images/{id}": {
+      "patch": {
+        "tags": [
+          "Game - Developer Route"
+        ],
+        "summary": "Upload images game thumbnail, screenshots, header_image",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "thumbnail": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "screenshots": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
+                  },
+                  "header_image": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                },
+                "required": [
+                  "thumbnail",
+                  "screenshots",
+                  "header_image"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/purchase": {
+      "post": {
+        "tags": [
+          "Purchase"
+        ],
+        "summary": "Create a new purchase",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "payment_method": {
+                    "type": "string",
+                    "enum": [
+                      "CREDIT_CARD"
+                    ]
+                  },
+                  "products": {
+                    "type": "object",
+                    "properties": {
+                      "game_id": {
+                        "type": "string"
+                      },
+                      "quantity": {
+                        "type": "number"
+                      }
+                    },
+                    "required": [
+                      "game_id",
+                      "quantity"
+                    ]
+                  }
+                },
+                "required": [
+                  "payment_method",
+                  "products"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/purchase/history": {
+      "get": {
+        "tags": [
+          "Purchase"
+        ],
+        "summary": "Get all purchases",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/purchase/{id}": {
+      "get": {
+        "tags": [
+          "Purchase"
+        ],
+        "summary": "Get a purchase",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -185,6 +607,57 @@
         "required": [
           "email",
           "password"
+        ]
+      },
+      "Game": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "desctiption": {
+            "type": "string"
+          },
+          "short_description": {
+            "type": "string"
+          },
+          "genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "operating_systems": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "build_number": {
+            "type": "string"
+          },
+          "version": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number"
+          },
+          "is_free": {
+            "type": "boolean"
+          },
+          "page_url": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "title",
+          "desctiption",
+          "genres",
+          "operating_systems",
+          "build_number",
+          "version",
+          "is_free",
+          "price"
         ]
       }
     },
